--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,20 +27,38 @@
     top: 32px;
     display: flex;
     justify-content: space-between;
-     
-     
 }
 
+ 
 
 
 
+ .hero-text {
+    background-color: rgba(255, 255, 255, 0.78);
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+    padding: 30px;
 
+  }
 
-.icons a {
-    color: #fff;
-    margin-left: 10px;
+  .shoppingBtn{
+    font-family:  'Dosis', sans-serif;
+    text-transform: uppercase;
     text-decoration: none;
-}
+    color: black;
+    border-bottom: 0.5px solid black;
+     
+     
+  }
 
-/* Include Font Awesome for icons */
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css');
+  .shoppingBtn:hover{
+     color: brown;
+     
+     
+  }
+
+ 
