--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,6 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
 /* resetting the body of the page */
-
 * {
     margin: 0;
     padding: 0;
@@ -11,8 +10,6 @@
 }
 
 /* The hero back ground */
-
-
 .hero {
      
     height: 100vh;
@@ -23,11 +20,7 @@
     background-size: cover;
     background-attachment: scroll;
 }
-
-.navicons a{
-  justify-content: space-between;
-  text-decoration: none;
-}
+ 
 .hero .container {
     width: 90%;
     margin: 0 auto;
@@ -54,22 +47,43 @@
     text-transform: uppercase;
     text-decoration: none;
     color: black;
-    border-bottom: 0.5px solid black;
-     
+    border-bottom: 0.5px solid black;   
      
   }
 
   .shoppingBtn:hover{
-     color: brown;
-     
-     
+     color: brown;    
   }
 
   .mainmenu ul{
     display: flex;
     justify-content: center;
     list-style: none;
-    
+         
+  }
+/* styling the nav icons */
+  .navicons ul{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+         
+  }
+ 
+  .navicons a{
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
+    justify-content: space-between
+  }
+
+  .navicons li{
+    margin-right: 12%;
+    text-decoration: none; 
+     
+  }
+
+  .navicons li:first-child{
+    margin-right: 15%;
      
   }
 
@@ -81,8 +95,7 @@
 
   .mainmenu li{
     margin-right: 12%;
-    text-decoration: none;
-     
+    text-decoration: none; 
      
   }
 
@@ -90,7 +103,6 @@
     margin-right: 12%;
      
   }
-
 
   .logo{
     padding-left: 20px;
@@ -102,12 +114,7 @@
     }
   }
 
-  /* Style the icons */  
-    
-  .mainmenu li{
-    margin-right: 10%;
-  }
-
+  
   /* Mobile styles */
   @media (max-width: 767px) {
     /* Mobile-specific styles go here */
