--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,18 +1,28 @@
-/* Import Font Awesome library */
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
-
-/* resetting the body of the page */
-* {
+ /* Import Font Awesome library */
+ @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
+ 
+ /* resetting the paddings */
+ *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: popin, sans-serif;
-}
+    font-family: poppin, sans-serif;
+ }
 
-/* The hero back ground */
-.hero {
-     
-    height: 100vh;
+ .hero-text {
+  background-color: rgba(255, 255, 255, 0.78);
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+  padding: 30px;
+
+}
+ /* Styling the hero section */
+ .hero {
+  height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)), url(/images/hero.jpg);
     background-repeat: no-repeat;
     background-repeat: no-repeat;
@@ -20,120 +30,84 @@
     background-size: cover;
     background-attachment: scroll;
 }
+
+/* styling the butting */
+
  
-.hero .container {
-    width: 90%;
-    margin: 0 auto;
-    position: absolute;
-    top: 32px;
+
+ /* Styling navbar and nav manue*/
+
+.navbar {
     display: flex;
+    align-items: center;
     justify-content: space-between;
-}
-
- .hero-text {
-    background-color: rgba(255, 255, 255, 0.78);
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: black;
-    padding: 30px;
-
+    
+    padding: 10px;
   }
-
-  .shoppingBtn{
-    font-family:  'Dosis', sans-serif;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: black;
-    border-bottom: 0.5px solid black;   
-     
-  }
-
-  .shoppingBtn:hover{
-     color: brown;    
-  }
-
-  .mainmenu ul{
-    display: flex;
-    justify-content: center;
+  .navbar-menu {
     list-style: none;
-         
-  }
-/* styling the nav icons */
-  .navicons ul{
     display: flex;
-    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+  }
+/* styling the iconsitems
+ */
+
+  .iconitems{
     list-style: none;
-         
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 0;
   }
- 
-  .navicons a{
-    color: white;
-    font-size: 20px;
+
+ .iconitems a {
     text-decoration: none;
-    justify-content: space-between
-  }
-
-  .navicons li{
-    margin-right: 12%;
-    text-decoration: none; 
-     
-  }
-
-  .navicons li:first-child{
-    margin-right: 15%;
-     
-  }
-
-  .mainmenu a{
     color: white;
-    font-size: 20px;
+    padding: 15px;
+    
+  }
+  
+  .navbar-menu li {
+    margin-right: 10px;
+  }
+  
+  .navbar-menu li:last-child {
+    margin-right: 0;
+  }
+  
+  .navbar-menu a {
     text-decoration: none;
+    color: white;
+    padding: 5px;
+    
   }
-
-  .mainmenu li{
-    margin-right: 12%;
-    text-decoration: none; 
-     
-  }
-
-  .mainmenu li:first-child{
-    margin-right: 12%;
-     
-  }
-
-  .logo{
-    padding-left: 20px;
-  }
-
-  @media (max-width:900px){
-    .mainmenu{
-      display: none;
-    }
-  }
-
   
   /* Mobile styles */
   @media (max-width: 767px) {
-    /* Mobile-specific styles go here */
+    .navbar-menu {
+      display: none;
+    }
+    
+    .navbar-logo {
+      text-align: center;
+      padding: 10px;
+    }
+    
+    .navbar-logo img {
+      max-width: 100px;
+    }
   }
-
-  /* Tablet styles */
-  @media (min-width: 768px) and (max-width: 991px) {
-    /* Tablet-specific styles go here */
+  
+  /* Tablet and desktop styles */
+  @media (min-width: 768px) {
+    .navbar-menu {
+      display: flex;
+    }
+    
+    .navbar-logo img {
+      max-width: 150px;
+    }
   }
-
-  /* Desktop styles */
-  @media (min-width: 992px) {
-    /* Desktop-specific styles go here */
-  }
- 
-
-
-
-
-
-
- 
+  
