--- a/assets/CSS/Style-products.css
+++ b/assets/CSS/Style-products.css
@@ -1,4 +1,4 @@
-/* left and right containers for message area */
+/*   containers for message area */
 .left {
     background-image: url(/assets/images/1.webp);
     background-size: cover;
